TAG: lib_py_littriage-6-0-22-10
TAG: lib_py_littriage-6-0-22-9
DATE: 12/14/2022, 12/15/2022
STAFF: lec
wts2-1073/Titles come in from pubmed that say 'dagger'
PubMedAgent.py : replace "dagger" with ""

TAG: lib_py_littriage-6-0-22-8
DATE: 12/13/2022
STAFF: lec
wts2-1072/Lit Triage load:  Abstract issue

TAG: lib_py_littriage-6-0-22-7
TAG: lib_py_littriage-6-0-22-6
TAG: lib_py_littriage-6-0-22-5
TAG: lib_py_littriage-6-0-22-4
TAG: lib_py_littriage-6-0-22-3
TAG: lib_py_littriage-6-0-22-2
TAG: lib_py_littriage-6-0-22-1
DATE: 11/25/2022, 11/29/2022, 12/09/2022
STAFF: lec
wts2-550/TR13423 - ltlo: NLM-refresh not updating abstract
non-ascii/authors, title, abstract

TAG: lib_py_littriage-6-0-18-1
DATE: 02/09/2022
STAFF: lec
wts2-599/PNAS journal no longer has page numbers in PubMed/PG tag
added 'eLocator' to PubMedAgent.py

TAG: lib_py_littriage-6-0-16-8
TAG: lib_py_littriage-6-0-16-7
DATE: 11/23/2021, 11/24/2021
STAFF: jak, lec
handle null extracted text in ExtractedTextSet.py
YAKS-380
chmod +x ExtractedTextSet.py PdfParser.py

TAG: lib_py_littriage-6-0-16-3
DATE: 08/24/2020
STAFF: jak
improve stderr capture from LITPARSER

TAG: lib_py_littriage-6-0-16-2
DATE: 08/21/2020
STAFF: jak
add test/getTextFromPdf.py

TAG: lib_py_littriage-6-0-16-1
DATE: 08/21/2020
STAFF: lec
TR13204/Infrastructure Release

TAG:
DATE: 08/14/2020
STAFF: jak
Merge master (including tr13312) into tr13204 - python 3

TAG: lib_py_littriage-6-0-15-3
DATE: 03/10/2020
STAFF: lec
PdfParser.py
TR13261/LTLO: Zenodo DOI

TAG: lib_py_littriage-6-0-15-2
DATE: 03/10/2020
STAFF: lec
PdfParser.py
TR13279/JCI & REP (Reproduction)

TAG: lib_py_littriage-6-0-15-1
DATE: 02/05/2020
STAFF: lec
PdfParser.py
TR13224/ltlo: PNAS doi extraction issue
TR13208/ltlo: blood journal doi extraction is truncated

TAG: lib_py_littriage-6-0-14-2
DATE: 11/21/2019
STAFF: jak 
TR13199/PLoS DOI extraction bug 

TAG: lib_py_littriage-6-0-14-1
DATE: 04/09/2019
STAFF: lec 
TR12963/teleuse-to-mgd_java_api

TAG: lib_py_littriage-6-0-11-14