@@ -1,3 +1,9 @@
+TAG: lib_py_littriage-6-0-22-11
+DATE: 02/22/2023
+STAFF: lec
+wts2-1127/fl2-225/LitTriage/EUtils issue
+PubMedAgent.py/getPubMedIDs(); re-organize try/except
+
 TAG: lib_py_littriage-6-0-22-10
 TAG: lib_py_littriage-6-0-22-9
 DATE: 12/14/2022, 12/15/2022
